s4-torture: don't build the lsa forest trust krb5 tests when building with MIT Kerberos.

BUG: https://bugzilla.samba.org/show_bug.cgi?id=11411

Guenther

Signed-off-by: Günther Deschner <gd@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>